# Seoltoir

./: .gitignore  CLAUDE.md  INITIAL.md  LICENSE  README.md  debug_output.txt  meson.build  mkdocs.yml  simple_test.html  test_reader_debug.py  test_reader_mode.html
PRPs/: 00-prp-index.md  01-core-navigation.md  02-tab-management.md  03-address-bar-omnibox.md  04-enhanced-privacy-features.md  05-find-in-page.md  06-reader-mode.md  07-zoom-controls.md  08-context-menus.md  09-printing-support.md  10-search-engine-management.md  11-desktop-notifications.md  12-password-management.md  13-developer-tools.md  14-media-enhancements.md  15-performance-optimization.md
data/: io.github.tobagin.seoltoir.appdata.xml  io.github.tobagin.seoltoir.desktop  io.github.tobagin.seoltoir.gschema.xml  seoltoir.in
data/ui/: bookmark-manager.ui  clear-data-dialog.ui  download-manager.ui  history-manager.ui  import-export-dialog.ui  main-content.ui  main-window.ui  menu.ui  preferences-window.ui  reader-mode-preferences.ui  search-engine-dialog.ui  site-settings-dialog.ui
docs/: contributing.md  customization.md  getting-started.md  index.md  privacy-features.md
packaging/: io.github.tobagin.Seoltoir.yaml  io.github.tobagin.seoltoir-local.yaml  io.github.tobagin.seoltoir-local.yml  io.github.tobagin.seoltoir.yml
scripts/: build_and_install.sh  build_local.sh  build_release.sh
src/seoltoir/: adblock_parser.py  bookmark_manager.py  browser_view.py  clear_data_dialog.py  container_manager.py  database.py  debug.py  download_manager.py  history_manager.py  https_everywhere_rules.py  import_export_dialog.py  main.py  omnibox_entry.py  opensearch_parser.py  password_import_export.py  password_manager.py  password_manager_window.py  performance_manager.py  performance_monitor.py  pip_window.py  preferences_window.py  reader_mode.css  reader_mode.js  reader_mode_preferences.py  reader_mode_simple.js  search_engine_dialog.py  search_engine_manager.py  search_suggestions_client.py  site_settings_dialog.py  ui_loader.py  window.py
tests/: test.py
